Added phonetic audio

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/bafb3b92c2.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Dictionary React App</title>
   </head>
   <body>
